# tuna

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  build.sh  package-lock.json  package.json  pyproject.toml  release.sh  requirements.txt  setup.py  test.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature.yml
.husky/: pre-commit
backend/: .gitignore  README.md  example.py  kill.sh  main.py  requirements.txt  run.py  start.sh
backend/browser/: .gitignore  bun.lockb  package-lock.json  package.json
backend/browser/src/: index.ts
backend/core/: dataset_gen.py  deploy.py  ec2_rollout.py  model_advice.py  planner.py  response.py  trainer.py
backend/data/: config.json  dataset.jsonl  output.py  run.sh  setup.sh  train_script.py
backend/sdks/: groqapi.py  hf.py  perplexity.py  perplexity2.py
backend/util/: dtypes.py  helpers.py  models.py  prompts.py  tools.py
frontend/: bun.lockb  middleware.ts  package.json  tailwind.config.ts
frontend/app/: fonts.tsx  layout.tsx
frontend/app/(landing)/: layout.tsx  page.tsx
frontend/app/project/: layout.tsx  page.tsx
frontend/components/hooks/: auth-provider.tsx  enter-submit.tsx
frontend/components/loaders/: pinwheel.tsx
frontend/lib/: dtypes.ts
frontend/lib/supabase/: client.ts  middleware.ts  server.ts
frontend/utils/: auth-helpers.ts
notebooks/: README.md
tests/: test_basic.py  utils.py
tuna/: .pylintrc  main.py  version.py
tuna/cli/: constants.py  datasets.py  fluidstack.py  github_fs.py  jupyter_fs.py  main.py  util.py
tuna/cli/cmd/: README.md  clone.py  init.py  open_repo.py  purge.py  refresh.py  serve.py  train.py
tuna/cli/core/: docs.py  (+7 more)
tuna/generators/: dataset.py  notebook.py
tuna/services/: README.md  evaluator.py  github.py  jupyter.py
tuna/util/: general.py
tuna_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+30 files in other folders)
